// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text> renders correctly 1`] = `
.c0 {
  display: inline;
  font-weight: normal;
  font-size: 12px;
  line-height: 20px;
  color: inherit;
}

<div
  class="c0"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.
</div>
`;

exports[`<Text> renders with different sizes render Text with size=100 1`] = `
.c0 {
  display: inline;
  font-weight: normal;
  font-size: 12px;
  line-height: 20px;
  color: inherit;
}

<div
  class="c0"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.
</div>
`;

exports[`<Text> renders with different sizes render Text with size=200 1`] = `
.c0 {
  display: inline;
  font-weight: normal;
  font-size: 14px;
  line-height: 23px;
  color: inherit;
}

<div
  class="c0"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.
</div>
`;

exports[`<Text> renders with different sizes render Text with size=300 1`] = `
.c0 {
  display: inline;
  font-weight: normal;
  font-size: 16px;
  line-height: 25px;
  color: inherit;
}

<div
  class="c0"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.
</div>
`;

exports[`<Text> renders with different sizes render Text with size=400 1`] = `
.c0 {
  display: inline;
  font-weight: normal;
  font-size: 18px;
  line-height: 28px;
  color: inherit;
}

<div
  class="c0"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.
</div>
`;

exports[`<Text> renders with different sizes render Text with size=500 1`] = `
.c0 {
  display: inline;
  font-weight: normal;
  font-size: 24px;
  line-height: 32px;
  color: inherit;
}

<div
  class="c0"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.
</div>
`;

exports[`<Text> renders with different sizes render Text with size=600 1`] = `
.c0 {
  display: inline;
  font-weight: normal;
  font-size: 32px;
  line-height: 44px;
  color: inherit;
}

<div
  class="c0"
>
  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat, voluptas.
</div>
`;
